[fix] align issue on trainer profile listing

--- a/public/assets/scss/custom/custom.scss
+++ b/public/assets/scss/custom/custom.scss
@@ -463,7 +463,7 @@ slick-slider .slick-list,
   z-index: 10;
   overflow: hidden;
   @media (max-width: 576px) {
-    width: 100%;
+    width: 96% !important;
   }
 }
 
